# Lecture-Navigator-Server

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py  models.py  service.py
scripts/: evaluate.py
