[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
youtube-transcript-api = "^0.6.2"
pydantic = "^2.7.0"
# Remove openai if not used for embeddings
# openai = "^1.51.0"
pymongo = "^4.8.0"
sentence-transformers = "^3.0.1"
google-generativeai = "^0.5.4"  # Add Gemini
python-dotenv = "^1.0.1"        # Add python-dotenv
llama-index = "*"
llama-index-vector-stores-mongodb = "*"
llama-index-readers-youtube-transcript = "*"
llama-index-llms-gemini = "*"
loguru = "^0.7.2"
python-multipart = "^0.0.9"      # For FastAPI file uploads
rerankers = "^0.5.0"             # Optional: extra re-ranker models support
requests = "^2.32.0"             # For evaluation script
pandas = "^2.2.0"                # For evaluation script
chromadb = "^0.5.5"
# Skip FAISS on Windows via marker; install manually (or use WSL/conda) if needed on Windows
faiss-cpu = { version = "1.8.0.post1", markers = "platform_system != 'Windows'" }